-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 9.0.1
-
55d51e8b5 (master)
When you type "import QtQuick.Controls.", you get suggestions like "QtQuick.Controls.Material", "QtQuick.Controls.Universal".
However, numerous styles are missing, namely "Fusion", "Imagine", "Basic", and the platform-specific styles ("Windows", "macOS", "iOS").

- is required for
-
QTCREATORBUG-28283 Improve auto-completion suggestions list for QML module imports
-
- Reported
-
- relates to
-
QTCREATORBUG-32178 [QmlJS] Provide autocompletion for "QtQuick.Controls.FluentWinUI3"
-
- Reported
-